[package]
name = "rtttui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
chrono = "0.4"
crossterm = "0.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "2.1"
tokio = {version = "1.14", features = ["full"]}
tui = "0.19.0"
